src/app/unit-page/unit-page.component.scss
@import '../../styles.scss';

.main {
    max-width: 1220px;
    width: 100%;
    padding: 0 20px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    position: relative;

    .header-element {
        display: flex;
        // width: 1180px; we do not set static widths to content containers! we do the next 2 lines below
        // max-width: 1220px; this is inherited from the parent
        width: 100%;
        padding: 10px 20px;
        background-image: var(--background-image);
        background-size: cover;
        background-repeat: no-repeat;
        background-position: right; // ?
        min-height: 141px; // svg height
        // position: absolute;

        .unit-avatar {
            display: flex;
            justify-content: left;
            align-items: center;
            margin: 0 25px 0 15px;
        }

        .unit-avatar img {
            width: 90px;
        }

        .unit-name-element {
            display: flex;
            justify-content: center;
            gap: 2px;
            margin: 0 40px 0 0;
            flex-direction: column;
            min-width: 130px;

            .unit-name {
                color: #F5F5F5;
                font-size: 24px;
                font-weight: 600;
                text-transform: uppercase;
                line-height: 24px;
            }

            .unit-weapon-name {
                color: #F5F5F5;
                font-size: 16px;
                font-weight: 200;
                font-style: italic;
            }

            .unit-element {
                display: flex;
                justify-content: left;
                align-items: center;
                gap: 5px;
            }

            .unit-element img {
                width: 36px;
            }
        }

        .unit-stats {
            display: flex;
            flex-direction: column;
            justify-content: center;
            gap: 20px;
            margin: 0 40px 0 0;

            .top-stats, .bottom-stats {
                display: flex;
                gap: 20px;

                .stats {
                    .grade {
                        line-height: 1;
                        font-size: 20px;
                        font-style: normal;
                        font-weight: bold;
                        color: $content;
                        padding: 4px 8px 2px; // 2px comes from the underside of the grade having extra space
                        background-color: #D9D9D9;
                        transform: skew(-8deg);
                    }
                }
            }
        }

        .unit-roles {
            display: flex;
            gap: 20px;
            align-items: flex-end;
            padding-bottom: 14px;
        }
    }

    .body-element {
        display: flex;
        flex-direction: column;
        gap: 20px;
        width: 100%;
        padding: 20px 20px;
        background-color: $content;

        .tabs {
            display: grid;
            grid-template-columns: repeat(4, 1fr);
            gap: 10px;

            .tab {
                display: flex;
                justify-content: center;
                align-items: center;
                gap: 8px;
                border: 1px solid var(--element-color); // first time using one of these, insanely useful actually. check TS.
                padding: 12px 0;
                cursor: pointer;

                img {
                    width: 28px;
                    height: 28px;
                }

                span {
                    font-weight: bold;
                    text-transform: uppercase;
                }
            }

            .tab.active {
                background-color: var(--element-color);
            }
        }

        .profile-part {
            .info-selection {
                position: relative;
                display: flex;
                border-bottom: 1px solid $border;
                padding: 0 0 5px 0;
                margin: 10px 0 0 0;

                .info {
                    text-transform: uppercase;
                    text-align: center;
                    color: var(--element-color);
                    font-weight: 500;
                    cursor: pointer;
                    margin: auto; // might be the only time i ever use this 
                }

                .underline {
                    position: absolute;
                    bottom: 0;
                    height: 3px;
                    background: white;
                    bottom: -2px;
                    width: 0;
                    left: 0;
                }
            }

            p {
                font-weight: 300;
                margin: unset;
            }

            .advancements-table {
                padding: 20px 80px;
                width: 100%;
                display: flex;
                margin: 20px 0 0 0;
                flex-direction: column;
                row-gap: 30px;
            }

            .advancements-table-row {
                display: flex;
                width: 100%;
                gap: 30px;
                justify-content: space-between;
                align-items: center;
            }

            .advancements-star-column {
                width: 5%;
            }

            .advancements-text-column {
                width: 95%;
                font-weight: 200;
            }

            .attack-wrap {
                padding: 20px 80px;
                width: 100%;
                display: flex;
                margin: 20px 0 0 0;
                flex-direction: column;
                row-gap: 30px;
                font-weight: 200;

                ul {
                    list-style-position: outside;
                    padding-left: 0;
                }

                li {
                    list-style-type: none;
                    display: flex;
                    align-items: flex-start;
                }

                span.number {
                    width: 0.8rem;
                    /* Adjust the width based on your needs */
                    text-align: center;

                }

                span.text {
                    margin-left: 0.5rem;
                    flex: 1;
                }
            }

            .attack-heading-wrap {
                display: flex;
                align-items: center;
                gap: 20px;
                margin-bottom: 20px;
            }

            .attack-name {
                font-size: 22px;
                font-weight: 500;
                padding-top: 4px;
            }

            .attack-container {
                border-bottom: 1px solid $border;
                padding: 0 0 30px;
            }

            .attack-heading {
                display: flex;
                flex-direction: column;
                gap: 6px;
            }

            .attack-method-wrap {
                display: flex;
                gap: 10px;
            }

            .attack-method {
                padding: 2px 10px;
                color: var(--element-color);
                border-color: var(--element-color);
                border-style: solid;
                border-width: 1px;
            }

            .attack-method p {
                font-weight: 400;
            }
        }
    }
}

.stats, .roles {
    display: flex;
    gap: 10px;
    align-items: center;
    color: #F5F5F5;
    font-size: 16px;
    font-weight: 400;
    font-style: italic;
}

.stats img, .roles img {
    width: 36px;
}

